--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -40,13 +40,13 @@
         android:layout_marginTop="30dp"
         app:srcCompat="@drawable/music" />
 
-    <androidx.appcompat.widget.AppCompatSeekBar
+    <SeekBar
         android:id="@+id/seekbar"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:progress="40"
+        android:progress="0"
         android:progressBackgroundTint="@color/white"
         android:progressTint="@color/white" />
 
@@ -57,5 +57,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:src="@android:drawable/ic_media_play" />
+        android:background="@drawable/ic_pause"
+        />
 </LinearLayout>
